--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   # Step 1: Call the Common Workflow.
   common-workflow:
-    uses: ./.github/workflows/common.yml  # Reference the reusable workflow.
+    uses: ./.github/workflows/common.yml  # Reference common workflow.
     permissions:
       contents: read
       pull-requests: read
@@ -66,21 +66,10 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # Step 10: Determine Version Tag.
+    # Step 10: Call the Reusable Version Determination Workflow.
     - name: Determine Version Tag
       id: version
-      run: |
-        git fetch --tags
-        LATEST_TAG=$(git tag -l --sort=-v:refname | head -n 1)
-
-        if [ -z "$LATEST_TAG" ]; then
-          VERSION="1.0.0"
-        else
-          VERSION="$LATEST_TAG"
-        fi
-
-        echo "VERSION=$VERSION" >> $GITHUB_ENV
-        echo "Version Tag: $VERSION"
+      uses: ./.github/workflows/determine-version.yml  # Calling version workflow.
 
     # Step 11: Build and Push Docker Image for app-develop.
     - name: Build and Push Docker Image for app-develop
