--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -8,11 +8,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout code to get tags
+      # Step 1: Check out the repository.
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      # Step 2: Determine Version Tag (keep original logic)
+      # Step 2: Set up Go.
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: stable
+
+      # Step 3: Determine Version Tag (keep original logic)
       - name: Determine Version Tag
         id: version
         run: |
@@ -28,6 +34,6 @@ jobs:
           echo "VERSION=$VERSION" >> $GITHUB_ENV
           echo "Version Tag: $VERSION"
 
-      # Step 3: Set the output of the version tag for reuse
+      # Step 4: Set the output of the version tag for reuse
       - name: Set Output
         run: echo "::set-output name=version::${{ env.VERSION }}"
