--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   # Step 1: Call the Common Workflow.
   common-workflow:
-    uses: ./.github/workflows/common.yml  # Call Common Workflow.
+    uses: ./.github/workflows/common.yml  # Call Common workflow.
     permissions:
       contents: read
       pull-requests: read
@@ -59,10 +59,21 @@ jobs:
     - name: Stop Running Containers
       run: docker stop $(docker ps -a -q)
 
-    # Step 9: Call the Reusable Version Determination Workflow.
+    # Step 9: Determine Version Tag.
     - name: Determine Version Tag
       id: version
-      uses: ./.github/workflows/version.yml  # Call Version Workflow.
+      run: |
+        git fetch --tags
+        LATEST_TAG=$(git tag -l --sort=-v:refname | head -n 1)
+
+        if [ -z "$LATEST_TAG" ]; then
+          VERSION="1.0.0"
+        else
+          VERSION="$LATEST_TAG"
+        fi
+
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
+        echo "Version Tag: $VERSION"
 
     # Step 10: Log in to DockerHub.
     - name: Log in to DockerHub
@@ -80,3 +91,4 @@ jobs:
           --tag ${{ secrets.DOCKER_USERNAME }}/app-develop:latest \
           --cache-from type=registry,ref=${{ secrets.DOCKER_USERNAME }}/app-develop:latest \
           --push .
+          
